Fix overflow issue

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,3 +1,10 @@
+:host {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    display: block;
+    overflow: hidden;
+}
 .app-root {
   &__container {
     display: flex;
