--- a/src/app/test/test.component.scss
+++ b/src/app/test/test.component.scss
@@ -21,9 +21,12 @@
 }
 
 .footer {
+    background: #E0FF4F;
+}
+
+.footer-bar {
     display: flex;
     justify-content: center;
-    background: #E0FF4F;
 }
 
 .title {
